--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.8.0"
   },
   "scripts": {
     "api": "node api-docs-generator.js",
@@ -16,7 +16,7 @@
     "bluebird": "3.5.1",
     "cheerio": "0.22.0",
     "documentation": "5.2.1",
-    "hexo": "3.7.1",
+    "hexo": "^3.8.0",
     "hexo-deployer-git": "0.3.1",
     "hexo-generator-alias": "0.1.3",
     "hexo-generator-sitemap": "1.2.0",
@@ -25,11 +25,11 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "0.3.2",
     "highlight.js": "9.12.0",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.11",
     "lunr": "^0.6.0",
     "marked": "0.4.0",
     "mkdirp": "0.5.1",
-    "moleculer": "0.13.0",
+    "moleculer": "^0.13.8",
     "pug": "2.0.3",
     "semver": "5.5.0"
   }
