--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "0.3.2",
     "highlight.js": "9.12.0",
-    "lodash": "^4.17.11",
+    "lodash": ">=4.17.13",
     "lunr": "^0.6.0",
-    "marked": "0.4.0",
+    "marked": "^0.7.0",
     "mkdirp": "0.5.1",
     "moleculer": "^0.13.8",
     "pug": "2.0.3",
